Fix buttons alignments

--- a/src/sass/abstracts/_variables.scss
+++ b/src/sass/abstracts/_variables.scss
@@ -25,7 +25,7 @@ $font-folder: '../assets/fonts/' !default;
 $font-family-base: monospace;
 $font-family-icon: 'Black-shrimp';
 $font-size-base: 16px;
-$line-height-base: 1.5;
+$line-height-base: 1;
 $line-height-lg: 2;
 $font-weight-bold: 600;
 
